--- a/courier-parent/courier-api/pom.xml
+++ b/courier-parent/courier-api/pom.xml
@@ -22,5 +22,10 @@
             <artifactId>javaee-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
     </dependencies>
 </project>
